# SwiftSage

./: .gitignore  README.md  app.py  app_reference.py  code_executor.py  data_loader.py  data_utils.py  eval_agent_fast_slow.py  eval_agent_react.py  eval_agent_reflexion.py  eval_agent_saycan.py  eval_utils.py  evaluate.py  grader.py  main.py  pyproject.toml  requirements.txt  run_eval.sh  run_eval_fast_slow.sh  run_eval_reflexion.sh  run_eval_saycan.sh  test.py  utils.py
ReAct_baseline/: generate_prompt.py  prompt_no_think.jsonl
analysis/: compute_average_tokens.py  compute_average_tokens_v2.py  decide_difficulty.py  efficiency.py  efficiency_v2.py  efficiency_v2_ave.py  human_agent.py  merge_results.py  num_vars.py  oracle_results.py  show_results.py  show_results_drrn.py  show_results_reflexion.py  sort_table.py
analysis/oracle_log/: task0-21-29.json  task1-21-29.json  task10-93-102.json  task11-93-102.json  task12-9-13.json  task13-6-9.json  task14-126-135.json  task15-1038-1047.json  task16-120-129.json  task17-93-102.json  task18-93-102.json  task19-93-102.json  task2-24-31.json  task20-327-336.json  task21-225-234.json  task22-21-29.json  task23-90-99.json  task24-360-369.json  task25-15-19.json  task26-15-19.json  task27-675-684.json  (+9 more)
baselines/: eval_agent_fast_only.py  run_eval_react.sh  run_eval_single.sh
fast_agent/: ds_train.sh  ds_train_by_group.sh  run_seq2seq.py
gradio/: app.py  requirements.txt
prompt_templates/: reward_template.md  sage_template.md  swift_template.md
scripts/: run_eval.sh
swiftsage/: app.py  cli.py  evaluate_benchmark.py
(+27 files in other folders)
